# opswise-ticket-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/github-actions/: ci.yml
opswise/: __init__.py  __main__.py  classifier.py  cli.py  exporters.py  loader.py  models.py  planner.py  retriever.py
runbooks/: application.md  application.txt  endpoint.md  endpoint.txt  identity-access.md  identity-access.txt  network.md  network.txt
sample_data/: tickets.csv
tests/: test_agent.py  test_classifier.py
