[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opswise-ticket-agent"
version = "0.1.0"
description = "CLI helpdesk ticket triage agent for IT and infrastructure workflows."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
opswise = "opswise.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["opswise*"]
